--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "x-and-0",
-  "private": true,
+  "name": "Tic-Tac-Toe",
+  "private": true, 
+  "homepage": "https://MariusCyber.github.io/Tic-Tac-Toe",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
