--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Tic-Tac-Toe",
+  "name": "tic-tac-toe",
   "private": true, 
-  "homepage": "https://MariusCyber.github.io/Tic-Tac-Toe",
+  "homepage": "https://MariusCyber.github.io/tic-tac-toe",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
